--- a/index.html
+++ b/index.html
@@ -1404,6 +1404,17 @@
                     type: 'movie',
                     videoUrl: 'https://axius.seeks.cloud/#s9hj1'
                 },
+                {
+                    id: 'Los Croods',
+                    title: 'Los Croods',
+                    year: '2018',
+                    rating: '9.0',
+                    genre: 'Animada',
+                    image: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ97bHqD9OkH_dK0XEDZkLsD6GCelWFJEmNYg&s',
+                    description: '',
+                    type: 'movie',
+                    videoUrl: 'https://axius.seeks.cloud/#k3x96'
+                },
             ],
             series: [
                 {
